[gd_scene load_steps=6 format=2]

[ext_resource path="res://Player/PlayerSprite.tscn" type="PackedScene" id=1]
[ext_resource path="res://Player/Player.gd" type="Script" id=2]
[ext_resource path="res://CollisionBoxes/Hurtbox.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 10 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 3, 9 )

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 2 )

[node name="PlayerSprite" parent="." instance=ExtResource( 1 )]
position = Vector2( 0, -9 )

[node name="Collider" type="CollisionShape2D" parent="."]
position = Vector2( 0, -10 )
shape = SubResource( 1 )

[node name="Hurtbox" parent="." instance=ExtResource( 4 )]
position = Vector2( 0, -9 )

[node name="Collider" parent="Hurtbox" index="0"]
shape = SubResource( 2 )

[node name="CoyoteJumpTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.25
one_shot = true

[node name="FireBulletTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.25
one_shot = true
[connection signal="death_animation_complete" from="PlayerSprite" to="." method="_on_PlayerSprite_death_animation_complete"]
[connection signal="hit" from="Hurtbox" to="." method="_on_Hurtbox_hit"]

[editable path="Hurtbox"]
